Changes to make the HTML more valid.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
         <title>BareMedium</title>
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="fa/font-awesome.min.css">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/responsive.css">
-        <link href='https://fonts.googleapis.com/css?family=Permanent+Marker|Life+Savers:400,700|PT+Sans:100,400,700|Lato:400|Open+Sans:100,400,700|Dosis:400|Didact+Gothic:100|Jura:400|Roboto:100,400,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Permanent+Marker%7COpen+Sans:100,400,700' rel='stylesheet' type='text/css'>
 
         <!-- Script links -->
         <script src='http://code.jquery.com/jquery-latest.min.js'></script>
@@ -29,7 +29,7 @@
     |   | |   |   |        \            |   \    /   |
     |   | |   |___|   |\    | _______   |    \  /    |_______
     |    -    |___|   |/    |/       \  |     \/     |       |
-    |         |   |         /   ___   \ |   |\  /|   |   --  |
+    |         |   |         /   ___   \ |   |\  /|   |   __  |
     |   |-|   |   |   |\   \          / |   | \/ |   |   ____|
     |   | |   |   |   | \   \  ______/  |   |    |   |  |____
     |___| |___|___|___|  \___\_______|  |___|    |___|_______|
@@ -47,7 +47,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <!-- This will become an image once the logo is completed -->
-                        <a class="navbar-left" href="#"><img src="img/BareMediumLogoWeb.svg" class="logo" height="30" width="30"></a>
+                        <a class="navbar-left" href="#"><img src="img/BareMediumLogoWeb.svg" alt="Logo image for Bare Medium." class="logo" height="30" width="30"></a>
                         <a class="navbar-brand" href="#">Bare Medium</a>
                     </div>
 
@@ -79,7 +79,7 @@
         <div class="container-fluid home_container" id="home">
             <h1>I'm Brent Robertson</h1>
             <p>a Front End Web Developer from Baltimore, Maryland</p>
-            <p>&#43 Freelance for hire.<p>
+            <p>&#43; Freelance for hire.<p>
             <!-- To set opacity to only the background image -->
             <div class="bg_home">
             </div>
@@ -95,7 +95,7 @@
             <div class="inner_about_container">
                 <div class="main_image_container">
                     <div class="main_image_div">
-                        <img class="main_image blurred_image" src="img/ProfessionalProfileImage.jpg" alt="">
+                        <img class="main_image blurred_image" src="img/ProfessionalProfileImage.jpg" alt="Professional image of me.">
                     </div>
                     <div class="real_me hidden">
                         <p>HAHA Get It?<p>
@@ -123,32 +123,32 @@
                 <div class="col-xs-12 col-md-10 col-md-offset-1">
                     <div class="skill_shell">
                         <div class="border_skill">
-                          <span class="skill_banner" id="html">HTML5</span>
+                            <span class="skill_banner" id="html">HTML5</span>
                         </div>
                     </div>
                     <div class="skill_shell">
                         <div class="border_skill">
-                          <span class="skill_banner" id="css">CSS3</span>
+                            <span class="skill_banner" id="css">CSS3</span>
                         </div>
                     </div>
                     <div class="skill_shell">
                         <div class="border_skill skill_relative">
-                          <span class="skill_banner" id="javascript">JavaScript</span>
+                            <span class="skill_banner" id="javascript">JavaScript</span>
                         </div>
                     </div>
                     <div class="skill_shell">
                         <div class="border_skill">
-                          <span class="skill_banner" id="bootstrap">Bootstrap</span>
+                            <span class="skill_banner" id="bootstrap">Bootstrap</span>
                         </div>
                     </div>
                     <div class="skill_shell">
                         <div class="border_skill">
-                          <span class="skill_banner" id="flexbox">FlexBox</span>
+                            <span class="skill_banner" id="flexbox">FlexBox</span>
                         </div>
                     </div>
                     <div class="skill_shell" data-toggle="popover">
                         <div class="border_skill" id="popover_wordpress">
-                          <span class="skill_banner" id="wordpress">WordPress</span>
+                            <span class="skill_banner" id="wordpress">WordPress</span>
                         </div>
                     </div>
                 </div>
@@ -224,7 +224,7 @@
                             <p>I was in charge of the initial contact with this organization, which led to a meeting to discuss the essential components needed for the landing page.  Audrey was a wonderful client to work with.  She was a wealth of knowledge and gave us all of the materials that we needed.  After I created a quick mockup using Sketch, we developed the landing page and sent the finished product to Audrey for review.  I was responsible for making the initial skeleton in HTML and changing some of the Bootstrap related HTML and CSS to make the page more responsive.  Once approved, we launched the new landing page.  We are currently in the process of completing the full version of the site, which will be done in WordPress.</p>
 
                             <p>Just for comparison, here is what the website looked like initially:</p>
-                            <img class="modal_image" src="img/MSS_before.png">
+                            <img class="modal_image" src="img/MSS_before.png" alt="Image of the Maryland Society of Sight webpage before I worked my magic.">
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -239,7 +239,7 @@
                 <div class="portfolio_thumbnails_container">
                     <!-- This is the container for the MD Society for Sight project. -->
                     <div class="project_container">
-                        <div class="thumbnail_container mss_image">
+                        <div class="thumbnail_container mss_image" title="Thumbnail of screenshot for Maryland Society for Sight website.">
                             <div class="project_skill hidden">CSS</div>
                             <div class="project_skill hidden">HTML</div>
                             <div class="project_skill hidden">Sketch</div>
@@ -247,19 +247,19 @@
                             <div class="thumbnail"></div>
                         </div>
 
-                        <div id="project_title">
-                            <i class="fa fa-angle-double-right custom fa-2x hidden"></i>
+                        <div class="project_title">
+                            <i class="fa fa-angle-double-right custom fa-2x hidden" title="Right pointing icon towards title."></i>
                             <h3 class="thumbnail_title mss"><a href="http://www.mdsocietyforsight.org/">MD Society for Sight</a></h3>
-                            <i class="fa fa-angle-double-left custom fa-2x hidden"></i>
+                            <i class="fa fa-angle-double-left custom fa-2x hidden" title="Left pointing icon towards title."></i>
                         </div>
 
                         <p class="brief_description">This is the new landing page for an amazing non-profit organization.  A partner and I are currently doing a refresh of their entire main webpage.  They're helping Maryland residents SEE results.</p>
                     <!-- TODO change the color of this on hover. -->
-                        <p id="read_more mss_modal" data-toggle="modal" data-target="#mss_modal"><a class="read_more_hover">Read More</a></p>
+                        <p id="mss_modal" class="read_more"data-toggle="modal" data-target="#mss_modal"><a class="read_more_hover">Read More</a></p>
                     </div>
                     <!-- This is the container for the ReThree Project. -->
                     <div class="project_container">
-                        <div class="thumbnail_container rethree_image">
+                        <div class="thumbnail_container rethree_image" title="Thumbnail of screenshot for ReThree project.">
                             <div class="project_skill hidden">CSS3</div>
                             <div class="project_skill hidden">HTML5</div>
                             <div class="project_skill hidden">JavaScript</div>
@@ -268,20 +268,20 @@
                             <div class="thumbnail"></div>
                         </div>
 
-                        <div id="project_title">
-                            <i class="fa fa-angle-double-right custom fa-2x hidden"></i>
+                        <div class="project_title">
+                            <i class="fa fa-angle-double-right custom fa-2x hidden" title="Right pointing icon towards title."></i>
                             <h3 class="thumbnail_title rethree"><a href="http://brobertson3.github.io/">ReThree</a></h3>
-                            <i class="fa fa-angle-double-left custom fa-2x hidden"></i>
+                            <i class="fa fa-angle-double-left custom fa-2x hidden" title="Left pointing icon towards title."></i>
                         </div>
 
                         <p class="brief_description">ReThree is an online tool, used to educate users on the three R’s: Reducing, Reusing, and Recycling.  This was the final project for my Front End Web Development course at <a href="https://generalassemb.ly/education/front-end-web-development" target="_blank">General Assembly</a>.</p>
                     <!-- TODO change the color of this on hover. -->
-                        <p id="read_more rethree_modal" data-toggle="modal" data-target="#rethree_modal"><a class="read_more_hover">Read More</a></p>
+                        <p id="rethree_modal" class="read_more" data-toggle="modal" data-target="#rethree_modal"><a class="read_more_hover">Read More</a></p>
                     </div>
 
                     <!-- This is the container for the BareMedium Project. -->
                     <div class="project_container">
-                        <div class="thumbnail_container baremedium_image">
+                        <div class="thumbnail_container baremedium_image" title="Thumbnail of screenshot for my Bare Medium portfolio website.">
                             <div class="project_skill hidden">CSS3</div>
                             <div class="project_skill hidden">HTML5</div>
                             <div class="project_skill hidden">JavaScript</div>
@@ -289,18 +289,18 @@
                             <div class="project_skill hidden">Bootstrap</div>
                             <div class="thumbnail"></div>
                         </div>
-                        <div id="project_title">
-                            <i class="fa fa-angle-double-right custom fa-2x hidden"></i>
+                        <div class="project_title">
+                            <i class="fa fa-angle-double-right custom fa-2x hidden" title="Right pointing icon towards title."></i>
                             <h3 class="thumbnail_title baremedium">BareMedium</h3>
-                            <i class="fa fa-angle-double-left custom fa-2x hidden"></i>
+                            <i class="fa fa-angle-double-left custom fa-2x hidden" title="Left pointing icon towards title."></i>
                         </div>
                         <p class="brief_description">Well this should look familiar.  This is my portfolio project where I display some of my work, as well as tell you a little about myself.  I also freelance, so if you like what you see then <a href="#contact_me">contact me</a> below.</p>
-                        <p id="read_more baremedium_modal" data-toggle="modal" data-target="#baremedium_modal"><a class="read_more_hover">Read More</a></p>
+                        <p id="baremedium_modal" class="read_more" data-toggle="modal" data-target="#baremedium_modal"><a class="read_more_hover">Read More</a></p>
                     </div>
 
                     <!-- This is the container for the Upcoming Chewzer Project. -->
                     <div class="project_container">
-                        <div class="thumbnail_container dashed_border coming_soon">
+                        <div class="thumbnail_container dashed_border coming_soon" title="Coming soon thumbnail with no image yet.">
                             <div class="thumbnail">
                                 <p>Coming Soon!</p>
                             </div>
@@ -321,7 +321,7 @@
                     <!-- Small screen I want each to take up entire width.
                     Medium and up it can go side by side. -->
                     <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 contact_form">
-                        <form action="mailto:brent.robertson3@gmail.com?subject=Interested in working together" enctype="text/plain" method="POST" id="contact_form">
+                        <form action="mailto:brent.robertson3@gmail.com?subject=Interested%20in%20working%20together" enctype="text/plain" method="POST" id="contact_form">
                             <div class="form-group">
                                 <label for="inputName">Name:</label>
                                 <input type="text" class="form-control" name="Name" id="inputName" placeholder="Full Name">
@@ -342,19 +342,19 @@
                 <div class="col-xs-12 contact_links">
                     <ul>
                         <a href="https://www.facebook.com/brent.robertson.56" target="_blank" id="facebook">
-                            <li><i class="fa fa-fw fa-facebook fa-2x"></i></li>
+                            <li><i class="fa fa-fw fa-facebook fa-2x" title="Facebook icon."></i></li>
                         </a>
                         <a href="https://www.linkedin.com/in/brentrobertson3" target="_blank" id="linkedin">
-                            <li><i class="fa fa-fw fa-linkedin fa-2x"></i></li>
+                            <li><i class="fa fa-fw fa-linkedin fa-2x" title="LinkedIn icon."></i></li>
                         </a>
                         <a href="https://twitter.com/TechMeOut21" target="_blank" id="twitter">
-                            <li><i class="fa fa-fw fa-twitter fa-2x"></i></li>
+                            <li><i class="fa fa-fw fa-twitter fa-2x" title="Twitter icon."></i></li>
                         </a>
                         <a href="http://www.tumblr.com/blog/baregeek" target="_blank" id="tumblr">
-                            <li><i class="fa fa-fw fa-tumblr fa-2x"></i></li>
+                            <li><i class="fa fa-fw fa-tumblr fa-2x" title="Tumblr icon."></i></li>
                         </a>
                         <a href="https://github.com/brobertson3" target="_blank" id="github">
-                            <li><i class="fa fa-fw fa-github fa-2x"></i></li>
+                            <li><i class="fa fa-fw fa-github fa-2x" title="Github icon."></i></li>
                         </a>
                     </ul>
                 </div>
