Many changes...check the diff

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <!-- Script links -->
         <script src='http://code.jquery.com/jquery-latest.min.js'></script>
         <script type="text/javascript" src="bootstrap/bootstrap.min.js"></script>
-        <script type="text/javascript">
+        <!-- <script type="text/javascript">
             $(function () { 
                 $("#rethree_modal").modal({show:false});
             });  
-        </script>
+        </script> -->
     </head>
 
     <body>
@@ -168,7 +168,7 @@
                             <h4 class="modal-title">ReThree</h4>
                         </div>
                         <div class="modal-body">
-                            <p>Technologies used: <span class="bold_tech">HTML5, CSS3, JavaScript, JavaScript UI, Bootstrap, FlexBox</span></p> 
+                            <p>Technologies used: <span class="bold_tech">HTML5, CSS3, JavaScript, JavaScript UI, Bootstrap, FlexBox</span></p> <a></p>
     
                             <p>This was my final project for my General Assembly course in May 2016.  The idea came about when I was talking to my wonderful girlfriend about a project idea.  She immediately stated that she would love if there was a website that would instruct people how to reduce, recycle, and reuse, in order to reduce waste and bolster the environment’s health.  So, being the Systems Engineer that she is, she laid out requirements for what she wanted the site to do.  She definitely will always be one of my favorite clients to work with.</p>
 
@@ -255,7 +255,7 @@
 
                         <p class="brief_description">This is the new landing page for an amazing non-profit organization.  A partner and I are currently doing a refresh of their entire main webpage.  They're helping Maryland residents SEE results.</p>
                     <!-- TODO change the color of this on hover. -->
-                        <p id="mss_modal" class="read_more"data-toggle="modal" data-target="#mss_modal"><a class="read_more_hover">Read More</a></p>
+                        <p class="read_more" data-toggle="modal" data-target="#mss_modal"><a class="read_more_hover">Read More</a></p>
                     </div>
                     <!-- This is the container for the ReThree Project. -->
                     <div class="project_container">
@@ -275,8 +275,8 @@
                         </div>
 
                         <p class="brief_description">ReThree is an online tool, used to educate users on the three R’s: Reducing, Reusing, and Recycling.  This was the final project for my Front End Web Development course at <a href="https://generalassemb.ly/education/front-end-web-development" target="_blank">General Assembly</a>.</p>
-                    <!-- TODO change the color of this on hover. -->
-                        <p id="rethree_modal" class="read_more" data-toggle="modal" data-target="#rethree_modal"><a class="read_more_hover">Read More</a></p>
+                        <!-- TODO change the color of this on hover. -->
+                        <p class="read_more" data-toggle="modal" data-target="#rethree_modal"><a class="read_more_hover">Read More</a></p>
                     </div>
 
                     <!-- This is the container for the BareMedium Project. -->
@@ -295,7 +295,7 @@
                             <i class="fa fa-angle-double-left custom fa-2x hidden" title="Left pointing icon towards title."></i>
                         </div>
                         <p class="brief_description">Well this should look familiar.  This is my portfolio project where I display some of my work, as well as tell you a little about myself.  I also freelance, so if you like what you see then <a href="#contact_me">contact me</a> below.</p>
-                        <p id="baremedium_modal" class="read_more" data-toggle="modal" data-target="#baremedium_modal"><a class="read_more_hover">Read More</a></p>
+                        <p class="read_more" data-toggle="modal" data-target="#baremedium_modal"><a class="read_more_hover">Read More</a></p>
                     </div>
 
                     <!-- This is the container for the Upcoming Chewzer Project. -->
@@ -341,21 +341,31 @@
                 <!-- Offset one for medium to provide spacing between form and links -->
                 <div class="col-xs-12 contact_links">
                     <ul>
-                        <a href="https://www.facebook.com/brent.robertson.56" target="_blank" id="facebook">
-                            <li><i class="fa fa-fw fa-facebook fa-2x" title="Facebook icon."></i></li>
-                        </a>
-                        <a href="https://www.linkedin.com/in/brentrobertson3" target="_blank" id="linkedin">
-                            <li><i class="fa fa-fw fa-linkedin fa-2x" title="LinkedIn icon."></i></li>
-                        </a>
-                        <a href="https://twitter.com/TechMeOut21" target="_blank" id="twitter">
-                            <li><i class="fa fa-fw fa-twitter fa-2x" title="Twitter icon."></i></li>
-                        </a>
-                        <a href="http://www.tumblr.com/blog/baregeek" target="_blank" id="tumblr">
-                            <li><i class="fa fa-fw fa-tumblr fa-2x" title="Tumblr icon."></i></li>
-                        </a>
-                        <a href="https://github.com/brobertson3" target="_blank" id="github">
-                            <li><i class="fa fa-fw fa-github fa-2x" title="Github icon."></i></li>
-                        </a>
+                        <li>
+                            <a href="https://www.facebook.com/brent.robertson.56" target="_blank" id="facebook">
+                                <i class="fa fa-fw fa-facebook fa-2x" title="Facebook icon."></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/brentrobertson3" target="_blank" id="linkedin">
+                                <i class="fa fa-fw fa-linkedin fa-2x" title="LinkedIn icon."></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/TechMeOut21" target="_blank" id="twitter">
+                                <i class="fa fa-fw fa-twitter fa-2x" title="Twitter icon."></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://www.tumblr.com/blog/baregeek" target="_blank" id="tumblr">
+                                <i class="fa fa-fw fa-tumblr fa-2x" title="Tumblr icon."></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/brobertson3" target="_blank" id="github">
+                                <i class="fa fa-fw fa-github fa-2x" title="Github icon."></i>
+                            </a>
+                        <li>
                     </ul>
                 </div>
             </div>
