Changed url for hangman

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
                         <div class="project_title">
                             <i class="fa fa-angle-double-right custom fa-2x hidden" title="Right pointing icon towards title."></i>
-                            <h3 class="thumbnail_title mss"><a href="http://www.mdsocietyforsight.org/">Hangman Game</a></h3>
+                            <h3 class="thumbnail_title mss"><a href="http://brobertson3.github.io/hangman/index.html">Hangman Game</a></h3>
                             <i class="fa fa-angle-double-left custom fa-2x hidden" title="Left pointing icon towards title."></i>
                         </div>
 
