All changes before adding gulp

--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
             </nav>
         </header>
 
+        <h2 class="title">Brent Robertson</h2>
+
         <footer>
-            <p>&copy; 2017 Brent Robertson - www.BareMedium.co</p>
+            <p>&copy; 2018 Brent Robertson - www.BareMedium.co</p>
         </footer>
 
         <script src="js/index.js"></script>
